--- a/Study/컴퓨터구조프로그래밍/3주차/3주차.md
+++ b/Study/컴퓨터구조프로그래밍/3주차/3주차.md
@@ -46,7 +46,7 @@
 ## 카운터
 
 - 미리 정해진 상태천이 순서를 순환하면서 클럭 펄스의 수를 카운트하는 소자(장치)이다.
-- 플립플롭을 으용한 회루로써 1,2,3,순서대로 수를 센다.
+- 플립플롭을 응용한 회로로써 1,2,3,순서대로 수를 센다.
 
 ## 레지스터
 
@@ -140,4 +140,3 @@ SRAM이나 DRAM은 모두 휘발성 메모리다. (전원이 끊어지면 데이
 
 ## 하드웨어와 소프트웨어 비교
 - 논리 회로는 컴퓨터 하드웨어 만드는곳 뿐만 아니라 소프트웨어만들 때 코드에도 들어가기 떄문에 하드웨어와 소프트웨어에서의 논리 만드는차이는 상당히 모호하다.
-
