--- a/Study/컴퓨터구조프로그래밍/5주차.md
+++ b/Study/컴퓨터구조프로그래밍/5주차.md
@@ -62,7 +62,7 @@
 4. 인터럽트 핸들러가 필요한 작업을 다 마치고 나면 원래 실행 중이던 프로그램이 중단된 위치붜 다시 실행을 계속한다. 
 ```
 
-### 상대 주소 지정
+### 주소 지정 방식
 
 - 여러 프로그램을 동시에 실행하는 방법
     - 각 프로그램을 서로 전환시켜 줄 수 있는 일종의 관리자 프로그램이 필요하다. 이런 프로그램을 운영체제 또는 운영체제 커널이라고 부른다.
@@ -71,7 +71,7 @@
     - OS : 시스템 프로그램
     - OS가 관리하는 프로그램:  다른 모든 프로그램을 사용자 프로그램이나 프로세스라고 부른다.
 
-- 여러 프로그램을 동시에 실행 시킬 때  OS는 타이머를 사용해 사용자 프로그램을 전환시켜줄 때가 됐는지 판단한다. 이런 식으로 사용자 프로그램의 실행 시간으 ㄹ조절하는 스케줄링 기법을 시분할 이라고 부른다.
+- 여러 프로그램을 동시에 실행 시킬 때  OS는 타이머를 사용해 사용자 프로그램을 전환시켜줄 때가 됐는지 판단한다. 이런 식으로 사용자 프로그램의 실행 시간을 조절하는 스케줄링 기법을 시분할 이라고 부른다.
 
 - 시분할 방식에서는 시간을 정해진 간격으로 나누고, 정해진 시간 간격 동안 사용자 프로그램을 실행한다.
 - 프로그램을 메모리로 불러들이려면 시간이 걸린다. 프로그램을 메모리로 불러오되  각 프로그램에게 가기 다른 공간을 허용할 수 있으면 훨씬 더 빠르게 시분할 실행이 가능하다.
@@ -84,3 +84,59 @@
 - ***상대 주소 지정***
     - 또 다른 방법으로는 상대주소 지정 방법이 있다.
     - 상대 주소 지정은 명령어에 들어있는 주소를 0부터 시작하는 위치로 해석하지 않고, 명령어의 주소를 기준으로 하는 상대적인 주소로 해석한다.
+
+    - 상대 주소 지정을 사용하면 프로그램을 메모리의 원하는 위치로 자유롭게 재배치 할 수 있다.
+
+
+### 메모리 관리 장치(Memory Management unit)
+
+- 하나의 프로그램에서 다른 프로그램의 메모리를 침입하는 경구를 불가능하게 만들기 위해 개념이 탄생했다.
+
+- 대부분 마이크로 프로세서에는 메모리 관리장치가 들어있다.
+
+- MMU가 들어 있는 시스템은 가상 주소와 물리주소를 구분한다. (프로그램은 가상 주소를 사용해 작성되고, MMU는 가상 주소를 물리 주소로 변환해 준다.)
+
+- 페이징: 논리 주소의 메모리를 고정된 크기의 페이지로 나누어 관리하는 기법이다.
+    - 물리주소의 공간을 페이지와 같은 사이즈로 나눈 것들을 프레임이라고 한다.
+    
+- 페이징 테이블
+    - 논리 주소의 페이지를 물리주소의 프레임과 매핑시켜주는 정보를 담고 있는 테이블이다.
+    - 페이지 테이블은 메인 메모리에 저장된다.
+    - 프로그램들이 서로 협력하는 경우에는 여러 프로그램의 가상 메모리 중 일부가 같은 물리 메모리를 함꼐 사용하는 공유 메모리 기능을 제공할 수도 있다.
+    - 페이지 테이블의 내용이 프로그램 문맥의 일부분이 된다.
+    - 논리주소는 연속적으로 붙어있지 않다. 
+    - 페이지 폴트예외 발생
+        - 프로그램이 물리적 메모리에 연관되지 않은 주소에 접근하면 발생하는 예외
+        - 스택 오버플로등이 일어날 떄 유용하게 사용된다.
+
+
+### 가상메모리
+
+- OS는 MMU를 사용해 사용자 프로그램에게 가상 메모리르 제공한다.
+- OS는 페이지 폴트 메커니즘으로 인해 프로그램은 필요한 만큼 많은 메모리가 있다고 생각할 수 있게 됐다.
+
+- 요청 받은 메모리가 사용 가능한 (물리적) 메모리의 크기보다 클 경우 --> 요구불페이징
+    ```
+    OS는 현재 필요하지 않은 메모리 페이지를 더 느리지만 더 용량이 큰 대용량 저장장치인 디스크로 옮긴다.(스왑 아웃)
+    이런 스왑 아웃한 페이지에 프로그램이 접근하면 운영체제는 필요한 메모리 공간을 확보하고 요청받은 페이지를 다시 메모리로 불러들인다.( 스왑인) 
+    ```
+- 스와핑(스왑인이나 스왑 아웃) 이 일어나면 시스템 성능이 크게 저하된다.
+    - 하지만 프로그램이 실행되지 못하는 경우보다는 이득보는게 커서 성능이 저하되도 사용하는 것이 유리하다.  이러한 기법은 최소 최근 사용 알고리즘을 통해 결정된다.
+
+### 시스템 공간과 사용자 공간
+- CPU에는 컴퓨터가 시스템 모드에 있는지 사용자 모드에 있는지 결정하는 어떤 레지스터 안에 들어있다.
+- I/O를 처리하는 명령어 등 일부 명령어는 특권 명령어라서 오직 시스템 모드에서만 실행할 수 있다.
+    - 트랩이나 시스템 콜이라고 부르는 특별한 명령어를 통해 사용자 모드에서 실행 중인 프로그램이 시스템 모드 프로그램에게 요청을 보낼 수 있다.
+
+    - 이런 방식에는 몇 가지 장점이 있다. 
+        - 사용자 프로그램으로 부터 운영체제를 보호하고, 사용자 프로그램을 다른 사용자 프로그램으로부터 보호한다.
+        - 사용자 프로그램이 MMU 등의 몇몇 요소에 손을 댈 수 없기 때문에 운영체제가 프로그램에 대한 자원 할당을 전적으로 제어할 수 있다.
+
+### 메모리 계층과 성능
+
+-  CPU,RAM,하드디스크
+    - 연산을 처리하기 위해서는 명령어를 읽ㄹ고 처리해야 한다.
+    - 명령어는 CPU에서 처리하지만 CPU에서 모든 명령어를 처리하면 좋지만, 처리할 수 없기에 CPU -> RAM -> 하드디스크 순으로 저장하고 기억한다. (속도순서이다 CPU가 제일 빠르가(명령어를 가져와서 처리하는 속도))
+
+- CPU 메모리 컨트롤러 
+    - 하드웨어는 메모리에서 연속된 열에 있는 데이터를 한꺼번에 가져온다. 대부분 연속된 위치에 있는 데이터가 필요하기 떄문이다. 
