5장 내용 추가

--- a/Java/모던인자바/5장.Md
+++ b/Java/모던인자바/5장.Md
@@ -22,7 +22,7 @@
 
 
 # 2 요소 건너뛰기
-- 스트림은 처음 n개 요소를 제외한 스트림을 반환하는 skip(n) 메서드를 지원한다. n개 이하의 요소를 포함하는 스트림에 skip(n)을 호ㅜㄹ하면 빈 스트림이 반환된다. limit(n)과 skim(n)은 상호 보완적인 연산을 수행한다.
+- 스트림은 처음 n개 요소를 제외한 스트림을 반환하는 skip(n) 메서드를 지원한다. n개 이하의 요소를 포함하는 스트림에 skip(n)을 호출하면 빈 스트림이 반환된다. limit(n)과 skim(n)은 상호 보완적인 연산을 수행한다.
 
 ```
 List<Dish> dishes = menu.stream()
@@ -48,6 +48,31 @@ List<String> uniqueCharacters = words.stream()
                                      .distinct()
                                      .collect(toList());
 ```
+
+## 4 검색과 매칭 
+
+- 프레디케이티가 주어진 스트림에서 적어도 한 요소와 일치하는지 확인할 때 anyMatch 메서드를 이용한다. 
+```
+if(menu.stream().anyMatch(Dish::isVegearian)){
+ // ... todo
+}
+```
+
+- 프레디케이트가 모든 요소와 일치하는지 검사
+    - allMatch 메서드는 anyMatch와 달리 스트림의 모든 요소가 주어진 프레디케이트와 일치하는지 검사한다.
+
+```
+boolean isHealthy = menu.stream().allMatch(dish -> dish.getCalories() < 1000)
+```
+
+- NONEMATCH
+
+- noneMatch는 allMatch와 반대 연산을 수행한다. 즉 noneMatch 는 주어진 프레디케이트와 일치하는 요소가 없는지 확인한다. 에를 들어 이전 예제를 다음처럼  noneWatch로 다시 구현할 수 있다.
+```
+boolean isHealthy = menu.stream().noneMatch(d -> d.getCalories() >= 1000);
+```
+
+### 위으 세메서드는 스트림 쇼트서킷 기법 즉 자바의 && || 와 같은 연산을 활용한다.
 
 
 ## 5.6실습 연습문제
