--- a/Java/개념정리/컬렉션.md
+++ b/Java/개념정리/컬렉션.md
@@ -1,5 +1,22 @@
 
-- ## Stack , Queue
+## Hash, Linked, Tree
+
+### 1. Hash
+-  해시 테이블 기반 Collection은 언제나 순서가 없다.
+- 삽입 순서, 데이터 정렬 순서가 존재 하지 않는다.
+- 순서를 가지고 있지 않아 3가지 종류중 제일 빠르다. 
+
+### 2. Linked 
+- 데이터 삽입 순서를 유지한 채 데이터를 저장한다.
+
+### 3. Tree
+- 데이터가 정렬되어 저장된다.
+    - Set : value 순서
+    - Map : Key 순서로 정렬된다.  
+
+- Comparator을 구현하여 순서를 변경할 수 있다. 
+
+## Stack , Queue
   - Stack
     - LIFO(Last in First out)
       - Object push() - 맨 끝에 데이터 추가
@@ -236,7 +253,7 @@ public class map1 {
 
   - 해싱을 구현한 컬렉션 클래스로는 HashSet,HashMap,Hashtable등이 있다.
 
-  - 저장할 데이터의 키를 해시함수에 넣으면 배열의 한 요소를 얻게 되고, 다시 그 곳에 연결되어 있는 링크드 리스트에 저장하괴 된다.
+  - 저장할 데이터의 키를 해시함수에 넣으면 배열의 한 요소를 얻게 되고, 다시 그 곳에 연결되어 있는 링크드 리스트에 저장하게 된다. 
     - 검색 하고자 하는 값의 키로 해시함수를 호출한다.
     - 해시함수의 계산 결과로 해당 값이 저장되어 있는 링크드 리스트를 찾는다.
     - 링크드 리스트에서 검색한 키와 일치하는 데이터를 찾는다.
