TIL 함수형 프로그래밍 복습

--- a/Java/개념정리/자바예외처리.md
+++ b/Java/개념정리/자바예외처리.md
@@ -1,7 +1,7 @@
 ## Exception
 - 오류 (에러 - 예외)
   - 에러: 프로그램 코드에 의해서 수습될 수 없는 심각한 오류
-  - 예외 프로그램 코드에 의해서 수습될 수 있는 다소 미약한 오류
+  - 예외: 프로그램 코드에 의해서 수습될 수 있는 다소 미약한 오류
 
 - 예외 클래스
   - Exception 클래스들: 사용자의 실수와 같은 외적인 요인에 의해 발생하는 예외
