--- a/Java/개념정리/함수형프로그래밍.md
+++ b/Java/개념정리/함수형프로그래밍.md
@@ -56,3 +56,64 @@
     - 종단연사: 요소를 처리하고 소모한다. (한번만 사용가능)
         - forEach, reduce, collect등이 존재한다. 
 
+
+
+## 스트림 함수
+
+
+### map
+
+- 함수형 인터페이스 Function<T,R>을 사용한다.
+
+```java
+// Stream.Map()
+// Function<T, R> 구현체
+// R apply(T t)을 구현해야한다.
+class FunctionClass implements Function<Integer, Integer> {
+    
+    
+    // List.of(1,2,3).stream().map((item) -> item * item) 과 같다. 
+    @Override
+    public Integer apply(Integer integer) {
+        return integer * integer;
+    }
+}
+
+```
+
+### Filter 
+
+- 함수혀 인터페이스 Predicate의 구현체를 사용하고  있다.
+
+```java 
+// Stream.Filter() 에서 사용한다.   
+// Predicate<T> 인터페이스 구현체
+// boolean test(T t);  함수를 구현해야 한다. 
+class EvenFunction implements Predicate<Integer> {
+    
+    // List.of(1,2,3,4).stream().filter(item -> item % 2 != 1) 과 같다.
+    @Override
+    public boolean test(Integer number) {
+        System.out.println("number");
+        return number % 2 != 1;
+    }
+}
+```
+
+
+### foreach 
+
+- Consumer 구현체를 사용하고 있다. 
+
+```java
+// forEach(<Consumer<? super T> action)
+// Consumer ==> void accept(T t); 구현해야함
+class ConsumerFunction implements Consumer<Integer> {
+    
+    // List.of(1,2,3,4).forEach((item) -> System.out.println(item)) 과 같다. 
+    @Override
+    public void accept(Integer integer) {
+        System.out.println(integer);
+    }
+}
+```
