--- a/Java/개념정리/함수형프로그래밍.md
+++ b/Java/개념정리/함수형프로그래밍.md
@@ -1,7 +1,43 @@
 ## 함수형 프로그래밍
+- 함수형 인터페이스 에서는 추상 메소드가 하나이다. <br/>
+인터페이스의 구현체는 추상 메소드의 구현체와 같음을 의미한다. 
+
+
 
 ### 일급함수
 - 함수를 또다른 함수의 매개변수로 넣는 것 을 일급함수라고 한다.  
+
+
+#### 1. 함수를 변수로 사용한다. 
+- 예제 코드에서는 변수에 함수를 담고 있다. 
+
+#### 2. 메소드에서 함수를 호출한다.
+- stream().filter() 부분에서 함수를 호출하고 있다.
+
+#### 3. 함수를 반환한다.
+- getIntegerPredicate() 함수에서는 함수를 반환하고 있다. 
+
+``` java 
+public class Stream3 {
+    public static void main(String[] args) {
+        List<Integer> integerList = List.of(1, 2, 3, 4, 5, 6, 7, 8, 10, 20, 30);
+
+        // 함수를 변수로 저장한다.
+        Predicate<Integer> functionVariables = (item) -> item % 2 != 1;
+
+        // 메소드에서 함수를 호출한다.
+        integerList.stream().filter(getIntegerPredicate()).forEach(new ConsumerFunction());
+
+
+    }
+
+    // 함수를 반환한다.
+    private static Predicate<Integer> getIntegerPredicate() {
+        return item -> item % 2 == 0;
+    }
+}
+
+```
 
 
 ### Lambda Expression
