TIL 동시성 소스 executorService.shutdown() 메소드 호출

--- a/Java/개념정리/동시성.md
+++ b/Java/개념정리/동시성.md
@@ -73,6 +73,7 @@ public class Counter {
         System.out.println("count " + counter.getI());
         System.out.println("tempCount  " + tempCount.getI());
         
+        executorService.shutdown();
         /**
         *   
             count 2999995
