9장 나머지 내용 추가 정리

--- a/Study/오브젝트/9장/9장.md
+++ b/Study/오브젝트/9장/9장.md
@@ -153,3 +153,23 @@ public class Client{
 
 어떤 객체가 책임을 수행하는 데 필요한 많은 정보를 가졌지만 해당 책임을 할당할 경우  응집도가 낮아지고 결합도가 높아진다면 가공의 객체를 추가해서
 책임을 옮기는 것을 고민하라. 
+
+
+## 의존성 주입
+
+- Service Locator 방식
+    - 의존성을 해결할 객체들을 보관하는 일종의 저장소
+    - 객체가 직접 Service Locator 에게 의존성을 해결해줄 것을 요청함
+    - 의존성이 암시적이고 코드 깊숙한 곳에 숨겨져 있음
+
+- 숨겨진 의존성
+    - 런타임에 문제를 발견할 수 있음.
+    - 코드 작성 시점이 아닌 실행시점으로 미루기 떄문
+    - 단위 테스트 작성도 어려움
+    - 캡술화도 위반함
+
+## 의존성 역전 원칙
+    - 상위 수준의 모듈은 하위 수준의 모듈에 의존해서는 안된다. 둘 모두 추상화에 의존해야한다.
+        - 상위 수준에 의해서 하위 수준이 변경되는 것은 OK
+        - 하위 수준에 의해서 상위 ㅅ준이 변경되는 것은 안됨.
+        
