--- a/Spring/toby/1장.md
+++ b/Spring/toby/1장.md
@@ -1,3 +1,5 @@
+# 1장
+
 ## 컨테이너 리스 개발
 
 - ` 컨테이너 없는 ` 웹 어플리케이션 아키텍처란?
@@ -24,3 +26,20 @@ Http-specific 클래스를 정의해둠
 
 스프링 부트는 매 버전 마다 사용할 기술의 종류를 선정하는 것만으로 사전 검증도니 추천 기술과 라이브러리 구성 의존 관계와 적용할 버전, 각 라이브러리의 세부 구성과 디폴트 설정을 제공한다. 
 
+
+
+# 2장
+
+HTTP 
+
+웹 Request와 Response의 기본 구조를 이해하고 내용을 확인할 수 있어야 한다. 
+
+### Reqeust
+- Request Line : Method, Path, HTTP Version
+- Headers
+- Message Body
+
+### Response
+- Status Line: Http Version, Status Code, Status TEXT
+- Headers
+- Message Body
