--- a/개인 독서/테스트 주도 개발 시작하기/3장.md
+++ b/개인 독서/테스트 주도 개발 시작하기/3장.md
@@ -38,3 +38,25 @@
 ### 테스트 대상 코드의 리팩토링 시점
 
 - 큰 틀에서 구현 흐름이 눈에 들어오기 시작한 뒤에 진행한다. 
+
+
+### 범위가 큰 리팩토링
+
+- 테스트 목록을 적었다고 해서 테스트를 한 번에 다 작성하면 안된다.
+    - 수정할 코드가 많을수록 리팩토링 하기가 어렵다.
+
+- 하나의 테스트 코드를 만들고 이를 통과시키고 리팩토링하고 다시 다음 테스트 코드를 만들고 통과시키고 리팩토링하는 과정은 비교적 짧은 리듬을 반복한다.  다루는 범위가 작고 개발 주기도 짧으므로 개발 집중력도 높아진다. 
+
+
+- 변경 범위가 큰 리팩토링 거리를 발견했을 때 리팩토링을 진행하지 말고 테스트를 통과시키는 데 집중한다. 
+
+    - 리팩토링 범위가 크면 리팩토링에 실패할 수도 있다. Git으로 하위 브랜치에서 작업하는게 좋을 수도 있다. 
+
+
+### 시작이 안 될 때는 단언부터 고민
+
+- 테스트 코드를 작성하다 보면 시작이 안될 때가 있다. 이럴 떈 검증하는 코드부터 작성하기 시작하면 도움이 된다. 
+
+### 구현이 막히면
+- 쉬운 테스트 , 예외적인 테스트
+- 완급 조절
