TIL 오브젝트 11장 정리끝 /n 믹스인은 자바에 안들어가서 정리안함

--- a/Study/오브젝트/11장/11장.md
+++ b/Study/오브젝트/11장/11장.md
@@ -38,3 +38,17 @@
 ### 상속으로 인한 조합의 폭발적인 증가
 
 - 요구사항이 추가될 때 마다 상속클래스를 사용하여 구현한다면 변경의 어려움이 생긴다.  여러개의 요구사항을 조합해야 되는 경우가 발생하기 때문이다. 
+
+
+### 합성 관계로 변경하기
+
+- 합성은 컴파일타임 관계를 런타임 관계로 변경함으로써 클래스폭발 문제를 해결한다. 
+    - 상속을 사용하면 부모 클래스와 자식 클래스 사이의 관계가 정적으로 고정되기 떄문에 실행 시점에 동적으로 관계를 변경할 수 있는 방법이 없다. 
+
+
+- 합성은 조합을 구성하는 요소들을 개별 클래스로 구현한 후 실행 시점에 인스턴스를 조립하는 방법을 사용하는 것이라고 할 수 있다. 컴파일 의존성에 속박되지 않고 다양한 방식의 런타임 의존성을 구성할 수  있다는 것이 합성이 제공하는 가장 커다란 장점이다. 
+    - 컴파일타임 의존성과 런타임 의존성의 거리가 멀면 멀수록 설계의 복잡도는 상승한다. 
+        - 설계는 변경과 유지보수를 위해 존재한다는 사실을 기억해야 한다. 
+        - 변경에 따르는 고통이 복잡성으로 인한 혼란을 넘어서고 있다면 유연성의 손을 들어주는 것이 현명한 판달일 경우가 높다. 
+
+        
