스크럼마스터 내용정리 데일리 스크럼

--- a/개인 독서/출근했던 스크럼마스터.md
+++ b/개인 독서/출근했던 스크럼마스터.md
@@ -39,4 +39,37 @@
 인셉션 덱을 하는 방법은 엘레베이터 피치를 만들고, 과제를 확인하기 위해 우리가 모인 이유를 생각한다. 
 
 
+데일리 스크럼을 효율적으로 이용하기
+- 해당 행위를 하는 이유를 모두가 이해해야한다. 왜 데일리 스크럼을 해야하는지? 해서 뭘 얻는지를 다 알고 잇
+으면 내용 공유가 좀 더 쉽다.
+		- 진척 상황을 보고하는것이 아니라 해당 스프린트 목표를 이루기 위해 어제의 스프린트 처리도와 
+왜 미루어졌는지 상황을 공유해야 한다. 
+- 좋은 질문하기
+	- 그 작업은 언제 완료되나요?
+	- 스프린트 리뷰 준비에는 어려움이 없나요?
+	- 어떻게 도와주면 되는지 이야기 들어보기
+
+- 데일리 스크럼에서 문제가 발생했을 경우, 15분안에 해결하지 못할 케이스이면 따로 회의를 잡아 처리한다. 
+	- 필요할 때 필요한 이야기만 하여 테스트에 집중할 시간을 벌 수 있다. 
+
+상황을 투명하게 가시화하는 방법
+- 스크럼을 투명성있게 관리하여 문제를 조기에 관리한다. 
+- 모든 작업은 스프린트 목표를 달성하기 위해서 있따. 조그만한 문제라도 팀원에게 공유해야한다. 
+- 팀원들과 테스크 보드를 공유하여 문제점 파악하기 (번다운차트)
+
+스프린트 리뷰
+- 이번 스프린트의 결과물을 점검하고 다음 스프린트에서 해야 할 일을 확인하는 활동이다. 
+- 스프린트에서 잘된 점, 잘안된 점, 해결했던 방법 등을 이야기하면서 스크럼팀의 현재
+상황을 알리고 각종 정보를 공유한다. 
+
+- 스프린트 리뷰에서 시연을 하는 이유
+	- 스프린트 결과물로 반드시 소프트웨어만 나오는건 아니다. 간혹 문서 같은 결과물도 만들 수 있다.
+		- 제품 릴리스 시 함께 배포할 메뉴얼이 좋은예이다. 
+	- 결과물이 소프트웨어라면 반드시 동작할 수 있는 상태여야 한다. 
+	- 시연은 정말 중요하다. 시연 없이 발표로만 때우는 걸 금기하는 이유다.
+
+
+스프린트 레트로스펙티브
+	- 스프린트 회고라고도 하는데 이번 스프린트를 되돌아보고, 다음 스프린트를 잘하기 위한 방안을
+모색하는 활동이다. 
 ```
