스크럼 마스터 Section25정리

--- a/개인 독서/출근했던 스크럼마스터.md
+++ b/개인 독서/출근했던 스크럼마스터.md
@@ -72,4 +72,25 @@
 스프린트 레트로스펙티브
 	- 스프린트 회고라고도 하는데 이번 스프린트를 되돌아보고, 다음 스프린트를 잘하기 위한 방안을
 모색하는 활동이다. 
+	- 스프린트 회고를 진행할 때는 일하는 방법에 대한 개선방향을 생각하는쪽으로 진행되어야 한다. 
+	개발의 문제점이나 제품의 문제점을 회고하는 자리는 아니기 떄문이다. 
+
 ```
+
+
+### 커밋먼트
+스크럼에서 개발자가 스스로 해결해야 될 문제를 책임지고 해결해야한다. 
+
+- 닭과 돼지
+	- 닭이 돼지에게 햄과 에그라는 음식을 팔기 위해 동업을 요청하지만 돼지를 화만낸다. 이유는 돼지는 살을 뜯고 닭은 알만 낳으면 되기 때문이다.
+	- 개발자의 일이 쉬워보여 PO들은 무리한 요청읋 할 수 있다. 이것을 적절하게 컷팅할 수 있어야 좋은 스크럼팀이 될 수 있다.
+		- 무리한 스케줄로 변동되어 안좋은 코드가 만들어지고 유지보수가 어려워진다. 
+	
+
+### 카이젠
+
+
+
+- 카이젠이란 뜻은 실무자를 중심으로 문제를 찾고 해결하는 과정을 의미한다. 
+	- 스크럼에서도 카이젠 방식을 도입하여 개발자가 문제를 찾고 해결해야한다. 
+	- 스크럼은 개발자 중심의 작업방식이다. 문제가 발생했을 경우. 개발자가 해결할 수 있도록 한다. 
