스크럼 - 커밋먼트 의미추가

--- a/개인 독서/출근했던 스크럼마스터.md
+++ b/개인 독서/출근했던 스크럼마스터.md
@@ -79,6 +79,8 @@
 
 
 ### 커밋먼트
+의미: 책임이 뒤따르는 약속
+
 스크럼에서 개발자가 스스로 해결해야 될 문제를 책임지고 해결해야한다. 
 
 - 닭과 돼지
@@ -88,8 +90,6 @@
 	
 
 ### 카이젠
-
-
 
 - 카이젠이란 뜻은 실무자를 중심으로 문제를 찾고 해결하는 과정을 의미한다. 
 	- 스크럼에서도 카이젠 방식을 도입하여 개발자가 문제를 찾고 해결해야한다. 
